question component done

--- a/DreamGirl/package.json
+++ b/DreamGirl/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "motion": "^12.12.2",
     "react": "^19.1.0",
