done with question card

--- a/DreamGirl/package.json
+++ b/DreamGirl/package.json
@@ -14,9 +14,11 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
