--- a/DreamGirl/package.json
+++ b/DreamGirl/package.json
@@ -14,7 +14,9 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.13.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.2",
     "react": "^19.1.0",
